# Copyright 2010-2025 Google LLC
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")
load("//ortools/copts:configure_copts.bzl", "ORTOOLS_DEFAULT_COPTS", "ORTOOLS_DEFAULT_LINKOPTS", "ORTOOLS_TEST_COPTS")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "base_swig",
    srcs = ["base.i"],
)

cc_library(
    name = "accurate_sum",
    hdrs = ["accurate_sum.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
)

cc_library(
    name = "adjustable_priority_queue",
    hdrs = [
        "adjustable_priority_queue.h",
        "adjustable_priority_queue-inl.h",
    ],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
)

cc_library(
    name = "base",
    hdrs = ["init_google.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = select({
        "@platforms//os:macos": ["-framework CoreFoundation"],
        "//conditions:default": [],
    }) + ORTOOLS_DEFAULT_LINKOPTS,
    deps = [
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/flags:usage",
        "@abseil-cpp//absl/log:initialize",
        "@abseil-cpp//absl/strings:string_view",
    ],
)

cc_library(
    name = "version",
    srcs = ["version.cc"],
    hdrs = ["version.h"],
    copts = [
        "-DOR_TOOLS_MAJOR=10",
        "-DOR_TOOLS_MINOR=0",
        "-DOR_TOOLS_PATCH=9999",
    ] + ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = ["@abseil-cpp//absl/strings"],
)

cc_library(
    name = "base_export",
    hdrs = ["base_export.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
)

cc_library(
    name = "bitmap",
    hdrs = ["bitmap.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
)

cc_library(
    name = "commandlineflags",
    srcs = ["commandlineflags.cc"],
    hdrs = ["commandlineflags.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = [
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/flags:usage",
    ],
)

cc_library(
    name = "constant_divisor",
    srcs = ["constant_divisor.cc"],
    hdrs = ["constant_divisor.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = [
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/numeric:int128",
    ],
)

cc_test(
    name = "constant_divisor_test",
    srcs = ["constant_divisor_test.cc"],
    copts = ORTOOLS_TEST_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = [
        ":constant_divisor",
        "//ortools/base:gmock_main",
        "//ortools/base:types",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/random",
        "@abseil-cpp//absl/random:bit_gen_ref",
        "@abseil-cpp//absl/random:distributions",
    ],
)

cc_binary(
    name = "constant_divisor_benchmark",
    srcs = ["constant_divisor_benchmark.cc"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = [
        ":benchmark_main",
        ":constant_divisor",
        "@abseil-cpp//absl/random",
        "@abseil-cpp//absl/random:bit_gen_ref",
        "@abseil-cpp//absl/random:distributions",
        "@google_benchmark//:benchmark",
    ],
)

cc_library(
    name = "benchmark_main",
    srcs = ["benchmark_main.cc"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = [
        "//ortools/base",
        "@google_benchmark//:benchmark",
    ],
    alwayslink = True,
)

cc_library(
    name = "container_logging",
    hdrs = ["container_logging.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = ["//ortools/base:types"],
)

cc_library(
    name = "dump_vars",
    hdrs = ["dump_vars.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = [
        ":intops",
        ":strong_int",
    ],
)

cc_test(
    name = "dump_vars_test",
    size = "small",
    srcs = ["dump_vars_test.cc"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = [
        ":dump_vars",
        ":strong_int",
        ":strong_vector",
        "@abseil-cpp//absl/numeric:int128",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "file",
    srcs = [
        "file.cc",
        "filesystem.cc",
        "helpers.cc",
    ],
    hdrs = [
        "basictypes.h",
        "file.h",
        "filesystem.h",
        "helpers.h",
        "options.h",
    ],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = [
        "@abseil-cpp//absl/base:config",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:status_macros",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@protobuf",
    ],
)

cc_library(
    name = "gmock",
    testonly = True,
    hdrs = ["gmock.h"],
    deps = [
        "@abseil-cpp//absl/status:status_matchers",
        "@googletest//:gtest",
        "@protobuf-matchers//protobuf-matchers",
    ],
)

cc_library(
    name = "gmock_main",
    testonly = True,
    deps = [
        ":gmock",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "gzipstring",
    hdrs = ["gzipstring.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = [
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/strings:string_view",
        "@zlib",
    ],
)

cc_library(
    name = "hash",
    srcs = ["hash.cc"],
    hdrs = ["hash.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
)

cc_library(
    name = "intops",
    hdrs = ["strong_int.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = [
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/strings:string_view",
    ],
)

cc_library(
    name = "iterator_adaptors",
    hdrs = ["iterator_adaptors.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
)

cc_library(
    name = "map_util",
    hdrs = ["map_util.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = ["@abseil-cpp//absl/log:check"],
)

cc_library(
    name = "mathutil",
    srcs = ["mathutil.cc"],
    hdrs = ["mathutil.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = [
        "@abseil-cpp//absl/base",
        "@abseil-cpp//absl/log:check",
    ],
)

cc_library(
    name = "memutil",
    hdrs = ["memutil.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
)

cc_library(
    name = "murmur",
    hdrs = ["murmur.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = ["//ortools/base:hash"],
)

cc_library(
    name = "numbers",
    srcs = ["numbers.cc"],
    hdrs = ["numbers.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = [
        "//ortools/base:types",
        "@abseil-cpp//absl/strings",
    ],
)

cc_library(
    name = "parse_text_proto",
    hdrs = ["parse_text_proto.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = [
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:status_macros",
        "@abseil-cpp//absl/strings:string_view",
        "@protobuf",
    ],
)

cc_library(
    name = "parse_test_proto",
    testonly = True,
    hdrs = ["parse_test_proto.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = [
        "//ortools/base:gmock",
        "@protobuf",
    ],
)

cc_library(
    name = "path",
    srcs = ["path.cc"],
    hdrs = ["path.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = [
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:string_view",
    ],
)

cc_library(
    name = "protobuf_util",
    hdrs = ["protobuf_util.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = [
        "@abseil-cpp//absl/log:check",
        "@protobuf",
    ],
)

cc_library(
    name = "protoutil",
    hdrs = ["protoutil.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = [
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/time",
        "@protobuf//:duration_cc_proto",
    ],
)

cc_library(
    name = "proto_enum_utils",
    hdrs = ["proto_enum_utils.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = ["@protobuf"],
)

cc_library(
    name = "recordio",
    srcs = ["recordio.cc"],
    hdrs = ["recordio.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = [
        ":file",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@zlib",
    ],
)

cc_library(
    name = "safe_hash_map",
    hdrs = ["safe_hash_map.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
)

cc_library(
    name = "status_builder",
    hdrs = ["status_builder.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = [
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:status_builder",
        "@abseil-cpp//absl/strings",
    ],
)

cc_library(
    name = "stl_util",
    hdrs = ["stl_util.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = [
        "@abseil-cpp//absl/base:core_headers",
        "@abseil-cpp//absl/meta:type_traits",
    ],
)

cc_library(
    name = "strong_int",
    hdrs = ["strong_int.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = [
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/strings:string_view",
    ],
)

cc_test(
    name = "strong_int_test",
    size = "small",
    timeout = "long",
    srcs = ["strong_int_test.cc"],
    copts = ORTOOLS_TEST_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    tags = ["noci"],
    deps = [
        ":strong_int",
        "//ortools/base:gmock_main",
        "@abseil-cpp//absl/container:node_hash_map",
        "@abseil-cpp//absl/flags:marshalling",
        "@abseil-cpp//absl/hash:hash_testing",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/numeric:int128",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
    ],
)

cc_library(
    name = "strong_vector",
    hdrs = ["strong_vector.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = [
        ":intops",
        "@abseil-cpp//absl/log:check",
    ],
)

cc_library(
    name = "strtoint",
    srcs = ["strtoint.cc"],
    hdrs = ["strtoint.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = [
        "@abseil-cpp//absl/base:core_headers",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/strings",
    ],
)

cc_test(
    name = "strtoint_test",
    size = "small",
    srcs = ["strtoint_test.cc"],
    copts = ORTOOLS_TEST_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = [
        ":strtoint",
        "//ortools/base:gmock_main",
        "//ortools/base:types",
    ],
)

cc_library(
    name = "temp_file",
    srcs = ["temp_file.cc"],
    hdrs = ["temp_file.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = [
        "//ortools/base/macros:os_support",
        "@abseil-cpp//absl/hash",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/time",
    ],
)

cc_library(
    name = "temp_path",
    srcs = ["temp_path.cc"],
    hdrs = ["temp_path.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = [
        ":file",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:string_view",
        "@abseil-cpp//absl/time",
    ],
)

cc_library(
    name = "threadpool",
    srcs = ["threadpool.cc"],
    hdrs = ["threadpool.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = [
        "@abseil-cpp//absl/algorithm:container",
        "@abseil-cpp//absl/base:core_headers",
        "@abseil-cpp//absl/base:nullability",
        "@abseil-cpp//absl/functional:any_invocable",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/strings:string_view",
        "@abseil-cpp//absl/synchronization",
    ],
)

cc_library(
    name = "timer",
    srcs = ["timer.cc"],
    hdrs = ["timer.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = [
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/time",
    ],
)

cc_library(
    name = "top_n",
    hdrs = ["top_n.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
)

cc_library(
    name = "types",
    hdrs = ["types.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
)

cc_library(
    name = "zipfile",
    srcs = ["zipfile.cc"],
    hdrs = ["zipfile.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = [
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/strings:string_view",
    ],
)

cc_library(
    name = "log_severity",
    hdrs = ["log_severity.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = [
        "@abseil-cpp//absl/base:log_severity",
    ],
)

cc_library(
    name = "unique_array",
    srcs = ["unique_array.cc"],
    hdrs = ["unique_array.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = [
        "@abseil-cpp//absl/base:core_headers",
        "@abseil-cpp//absl/base:nullability",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/strings:str_format",
    ],
)

cc_library(
    name = "gzipfile",
    srcs = ["gzipfile.cc"],
    hdrs = ["gzipfile.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = [
        ":file",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings:string_view",
        "@zlib",
    ],
)

cc_test(
    name = "gzipfile_test",
    size = "small",
    srcs = ["gzipfile_test.cc"],
    copts = ORTOOLS_TEST_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = [
        ":file",
        ":gzipfile",
        "//ortools/base:gmock_main",
        "@abseil-cpp//absl/strings",
        "@zlib",
    ],
)

cc_library(
    name = "bzip2file",
    srcs = ["bzip2file.cc"],
    hdrs = ["bzip2file.h"],
    copts = ORTOOLS_DEFAULT_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = [
        ":file",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings:string_view",
        "@bzip2//:bz2",
    ],
)

cc_test(
    name = "bzip2file_test",
    size = "small",
    srcs = ["bzip2file_test.cc"],
    copts = ORTOOLS_TEST_COPTS,
    linkopts = ORTOOLS_DEFAULT_LINKOPTS,
    deps = [
        ":bzip2file",
        ":file",
        "//ortools/base:gmock_main",
        "@abseil-cpp//absl/strings",
        "@bzip2//:bz2",
    ],
)
