# Copyright 2010-2025 Google LLC
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "bop_parameters_proto",
    srcs = ["bop_parameters.proto"],
)

cc_proto_library(
    name = "bop_parameters_cc_proto",
    deps = [":bop_parameters_proto"],
)

cc_library(
    name = "bop_types",
    hdrs = ["bop_types.h"],
    deps = [
        "//ortools/base:strong_vector",
        "//ortools/util:strong_integers",
    ],
)

cc_library(
    name = "bop_base",
    srcs = ["bop_base.cc"],
    hdrs = ["bop_base.h"],
    deps = [
        ":bop_parameters_cc_proto",
        ":bop_solution",
        ":bop_types",
        "//ortools/base:strong_vector",
        "//ortools/lp_data:base",
        "//ortools/sat:boolean_problem_cc_proto",
        "//ortools/sat:clause",
        "//ortools/sat:sat_base",
        "//ortools/util:stats",
        "//ortools/util:strong_integers",
        "//ortools/util:time_limit",
        "@abseil-cpp//absl/base:core_headers",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/synchronization",
    ],
)

cc_library(
    name = "bop_util",
    srcs = ["bop_util.cc"],
    hdrs = ["bop_util.h"],
    deps = [
        ":bop_base",
        ":bop_solution",
        ":bop_types",
        "//ortools/base:strong_vector",
        "//ortools/sat:boolean_problem",
        "//ortools/sat:boolean_problem_cc_proto",
        "//ortools/sat:pb_constraint",
        "//ortools/sat:restart",
        "//ortools/sat:sat_base",
        "//ortools/sat:sat_solver",
        "//ortools/util:bitset",
        "//ortools/util:strong_integers",
        "@abseil-cpp//absl/log:check",
    ],
)

cc_library(
    name = "bop_solution",
    srcs = ["bop_solution.cc"],
    hdrs = ["bop_solution.h"],
    deps = [
        ":bop_types",
        "//ortools/base:strong_vector",
        "//ortools/sat:boolean_problem",
        "//ortools/sat:boolean_problem_cc_proto",
        "//ortools/sat:pb_constraint",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/strings",
    ],
)

cc_test(
    name = "bop_solution_test",
    size = "small",
    srcs = ["bop_solution_test.cc"],
    deps = [
        ":bop_solution",
        ":bop_types",
        "//ortools/base:gmock_main",
        "//ortools/sat:boolean_problem_cc_proto",
        "//ortools/util:strong_integers",
        "@abseil-cpp//absl/log:check",
        "@protobuf",
    ],
)

cc_library(
    name = "bop_fs",
    srcs = ["bop_fs.cc"],
    hdrs = ["bop_fs.h"],
    deps = [
        ":bop_base",
        ":bop_parameters_cc_proto",
        ":bop_solution",
        ":bop_types",
        ":bop_util",
        "//ortools/algorithms:sparse_permutation",
        "//ortools/base:strong_vector",
        "//ortools/glop:lp_solver",
        "//ortools/glop:parameters_cc_proto",
        "//ortools/lp_data",
        "//ortools/lp_data:base",
        "//ortools/sat:boolean_problem",
        "//ortools/sat:boolean_problem_cc_proto",
        "//ortools/sat:clause",
        "//ortools/sat:lp_utils",
        "//ortools/sat:pb_constraint",
        "//ortools/sat:sat_base",
        "//ortools/sat:sat_parameters_cc_proto",
        "//ortools/sat:sat_solver",
        "//ortools/sat:symmetry",
        "//ortools/sat:util",
        "//ortools/util:strong_integers",
        "//ortools/util:time_limit",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/random:bit_gen_ref",
        "@abseil-cpp//absl/random:distributions",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
    ],
)

cc_library(
    name = "bop_lns",
    srcs = ["bop_lns.cc"],
    hdrs = ["bop_lns.h"],
    deps = [
        ":bop_base",
        ":bop_parameters_cc_proto",
        ":bop_solution",
        ":bop_types",
        ":bop_util",
        "//ortools/base:strong_vector",
        "//ortools/glop:lp_solver",
        "//ortools/lp_data",
        "//ortools/lp_data:base",
        "//ortools/sat:boolean_problem",
        "//ortools/sat:boolean_problem_cc_proto",
        "//ortools/sat:lp_utils",
        "//ortools/sat:pb_constraint",
        "//ortools/sat:sat_base",
        "//ortools/sat:sat_parameters_cc_proto",
        "//ortools/sat:sat_solver",
        "//ortools/util:stats",
        "//ortools/util:strong_integers",
        "//ortools/util:time_limit",
        "@abseil-cpp//absl/cleanup",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/random:bit_gen_ref",
        "@abseil-cpp//absl/random:distributions",
        "@abseil-cpp//absl/strings",
    ],
)

cc_library(
    name = "complete_optimizer",
    srcs = ["complete_optimizer.cc"],
    hdrs = ["complete_optimizer.h"],
    deps = [
        ":bop_base",
        ":bop_parameters_cc_proto",
        ":bop_solution",
        ":bop_types",
        ":bop_util",
        "//ortools/sat:boolean_problem_cc_proto",
        "//ortools/sat:encoding",
        "//ortools/sat:model",
        "//ortools/sat:pb_constraint",
        "//ortools/sat:sat_base",
        "//ortools/sat:sat_parameters_cc_proto",
        "//ortools/sat:sat_solver",
        "//ortools/util:stats",
        "//ortools/util:strong_integers",
        "//ortools/util:time_limit",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/strings",
    ],
)

cc_library(
    name = "bop_ls",
    srcs = ["bop_ls.cc"],
    hdrs = ["bop_ls.h"],
    deps = [
        ":bop_base",
        ":bop_parameters_cc_proto",
        ":bop_solution",
        ":bop_types",
        ":bop_util",
        "//ortools/base:logging",
        "//ortools/base:strong_vector",
        "//ortools/sat:boolean_problem_cc_proto",
        "//ortools/sat:sat_base",
        "//ortools/sat:sat_solver",
        "//ortools/util:strong_integers",
        "//ortools/util:time_limit",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/meta:type_traits",
        "@abseil-cpp//absl/random",
        "@abseil-cpp//absl/random:bit_gen_ref",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/types:span",
    ],
)

cc_library(
    name = "bop_portfolio",
    srcs = ["bop_portfolio.cc"],
    hdrs = ["bop_portfolio.h"],
    deps = [
        ":bop_base",
        ":bop_fs",
        ":bop_lns",
        ":bop_ls",
        ":bop_parameters_cc_proto",
        ":bop_solution",
        ":bop_types",
        ":bop_util",
        ":complete_optimizer",
        "//ortools/algorithms:sparse_permutation",
        "//ortools/base:stl_util",
        "//ortools/base:strong_vector",
        "//ortools/glop:lp_solver",
        "//ortools/lp_data:base",
        "//ortools/sat:boolean_problem",
        "//ortools/sat:boolean_problem_cc_proto",
        "//ortools/sat:sat_solver",
        "//ortools/sat:symmetry",
        "//ortools/util:random_engine",
        "//ortools/util:stats",
        "//ortools/util:strong_integers",
        "//ortools/util:time_limit",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/log:vlog_is_on",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
    ],
)

cc_library(
    name = "bop_solver",
    srcs = ["bop_solver.cc"],
    hdrs = ["bop_solver.h"],
    deps = [
        ":bop_base",
        ":bop_parameters_cc_proto",
        ":bop_portfolio",
        ":bop_solution",
        ":bop_types",
        "//ortools/base:threadpool",
        "//ortools/lp_data:base",
        "//ortools/sat:boolean_problem",
        "//ortools/sat:boolean_problem_cc_proto",
        "//ortools/sat:pb_constraint",
        "//ortools/util:stats",
        "//ortools/util:time_limit",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings:str_format",
        "@protobuf",
    ],
)

cc_library(
    name = "integral_solver",
    srcs = ["integral_solver.cc"],
    hdrs = ["integral_solver.h"],
    deps = [
        ":bop_parameters_cc_proto",
        ":bop_solution",
        ":bop_solver",
        ":bop_types",
        "//ortools/base:strong_vector",
        "//ortools/base:threadpool",
        "//ortools/lp_data",
        "//ortools/lp_data:base",
        "//ortools/lp_data:lp_decomposer",
        "//ortools/lp_data:lp_utils",
        "//ortools/lp_data:sparse",
        "//ortools/lp_data:sparse_column",
        "//ortools/lp_data:sparse_vector",
        "//ortools/sat:boolean_problem",
        "//ortools/sat:boolean_problem_cc_proto",
        "//ortools/util:bitset",
        "//ortools/util:fp_utils",
        "//ortools/util:strong_integers",
        "//ortools/util:time_limit",
        "@abseil-cpp//absl/base:core_headers",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/strings:str_format",
    ],
)
