ENABLE_LANGUAGE(CXX)
# ENABLE_LANGUAGE(Python)
SET(ROOT_PROJECT ${PROJECT_NAME})
PROJECT(${PROJECT_NAME}_bop)

FILE(GLOB ${PROJECT_NAME}_SOURCES "*.cc")
PROTOBUF_GENERATE_CPP(PROTO_SRCS PROTO_HDRS bop_parameters.proto)

ADD_CUSTOM_TARGET(ForceProtobufGen_${PROJECT_NAME}
        ALL
        DEPENDS
        ${PROTO_SRCS})

ADD_LIBRARY(${PROJECT_NAME} OBJECT ${${PROJECT_NAME}_SOURCES} ${PROTO_SRCS})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES POSITION_INDEPENDENT_CODE ON)