# Copyright 2010-2025 Google LLC
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Home of constraint solver constraint_solver

load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@protobuf//bazel:java_proto_library.bzl", "java_proto_library")
load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@protobuf//bazel:py_proto_library.bzl", "py_proto_library")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_python//python:py_library.bzl", "py_library")

proto_library(
    name = "assignment_proto",
    srcs = ["assignment.proto"],
    visibility = ["//visibility:public"],
)

cc_proto_library(
    name = "assignment_cc_proto",
    visibility = ["//visibility:public"],
    deps = [":assignment_proto"],
)

proto_library(
    name = "search_limit_proto",
    srcs = ["search_limit.proto"],
    visibility = ["//visibility:public"],
)

cc_proto_library(
    name = "search_limit_cc_proto",
    visibility = ["//visibility:public"],
    deps = [":search_limit_proto"],
)

java_proto_library(
    name = "search_limit_java_proto",
    visibility = ["//visibility:public"],
    deps = [":search_limit_proto"],
)

proto_library(
    name = "demon_profiler_proto",
    srcs = ["demon_profiler.proto"],
    visibility = ["//visibility:public"],
)

cc_proto_library(
    name = "demon_profiler_cc_proto",
    visibility = ["//visibility:public"],
    deps = [":demon_profiler_proto"],
)

proto_library(
    name = "search_stats_proto",
    srcs = ["search_stats.proto"],
    visibility = ["//visibility:public"],
)

cc_proto_library(
    name = "search_stats_cc_proto",
    visibility = ["//visibility:public"],
    deps = [":search_stats_proto"],
)

java_proto_library(
    name = "search_stats_java_proto",
    visibility = ["//visibility:public"],
    deps = [":search_stats_proto"],
)

proto_library(
    name = "solver_parameters_proto",
    srcs = ["solver_parameters.proto"],
    visibility = ["//visibility:public"],
)

cc_proto_library(
    name = "solver_parameters_cc_proto",
    visibility = ["//visibility:public"],
    deps = [":solver_parameters_proto"],
)

java_proto_library(
    name = "solver_parameters_java_proto",
    visibility = ["//visibility:public"],
    deps = [":solver_parameters_proto"],
)

py_proto_library(
    name = "assignment_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":assignment_proto"],
)

py_proto_library(
    name = "search_limit_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":search_limit_proto"],
)

py_proto_library(
    name = "demon_profiler_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":demon_profiler_proto"],
)

py_proto_library(
    name = "search_stats_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":search_stats_proto"],
)

py_proto_library(
    name = "solver_parameters_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":solver_parameters_proto"],
)

py_library(
    name = "constraint_solver_py_pb2",
    visibility = ["//visibility:public"],
    deps = [
        ":assignment_py_pb2",
        ":demon_profiler_py_pb2",
        ":search_limit_py_pb2",
        ":search_stats_py_pb2",
        ":solver_parameters_py_pb2",
    ],
)

# ----- Constraint Programming core engine -----

# This is the main library.
# TODO(user): split this monolithic library into independent components.
# Do the same for others.
cc_library(
    name = "cp",
    srcs = [
        "alldiff_cst.cc",
        "assignment.cc",
        "constraint_solver.cc",
        "constraints.cc",
        "count_cst.cc",
        "default_search.cc",
        "demon_profiler.cc",
        "deviation.cc",
        "diffn.cc",
        "element.cc",
        "expr_array.cc",
        "expr_cst.cc",
        "expressions.cc",
        "graph_constraints.cc",
        "interval.cc",
        "local_search.cc",
        "model_cache.cc",
        "pack.cc",
        "range_cst.cc",
        "resource.cc",
        "sched_constraints.cc",
        "sched_expr.cc",
        "sched_search.cc",
        "search.cc",
        "table.cc",
        "timetabling.cc",
        "trace.cc",
        "utilities.cc",
        "visitor.cc",
    ],
    hdrs = [
        "constraint_solver.h",
        "constraint_solveri.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":assignment_cc_proto",
        ":demon_profiler_cc_proto",
        ":search_limit_cc_proto",
        ":search_stats_cc_proto",
        ":solver_parameters_cc_proto",
        "//ortools/base",
        "//ortools/base:base_export",
        "//ortools/base:bitmap",
        "//ortools/base:file",
        "//ortools/base:int_type",
        "//ortools/base:intops",
        "//ortools/base:iterator_adaptors",
        "//ortools/base:map_util",
        "//ortools/base:mathutil",
        "//ortools/base:numbers",
        "//ortools/base:recordio",
        "//ortools/base:stl_util",
        "//ortools/base:strong_vector",
        "//ortools/base:sysinfo",
        "//ortools/base:timer",
        "//ortools/base:types",
        "//ortools/graph:hamiltonian_path",
        "//ortools/util:bitset",
        "//ortools/util:cached_log",
        "//ortools/util:monoid_operation_tree",
        "//ortools/util:piecewise_linear_function",
        "//ortools/util:range_minimum_query",
        "//ortools/util:saturated_arithmetic",
        "//ortools/util:sorted_interval_list",
        "//ortools/util:string_array",
        "//ortools/util:tuple_set",
        "@abseil-cpp//absl/algorithm:container",
        "@abseil-cpp//absl/base:core_headers",
        "@abseil-cpp//absl/base:log_severity",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/log:vlog_is_on",
        "@abseil-cpp//absl/random",
        "@abseil-cpp//absl/random:distributions",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/time",
        "@abseil-cpp//absl/types:span",
        "@zlib",
    ],
)
